Bug 60098 - [softpipe] Unexpected PIPE_CAP 78 query
Summary: [softpipe] Unexpected PIPE_CAP 78 query
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Andreas Boll
QA Contact:
URL:
Whiteboard:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-01-31 02:04 UTC by Vinson Lee
Modified: 2013-02-04 15:32 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2013-01-31 02:04:16 UTC
mesa: a527b2192e3cb4a68af927ab405e38181d2fcf75 (master)

Run piglit tests on softpipe.

Unexpected PIPE_CAP 78 query


a901d54f67be0a9ec5a33195036eb6dfc54b501c is the first bad commit
commit a901d54f67be0a9ec5a33195036eb6dfc54b501c
Author: Christoph Bumiller <e0425955@student.tuwien.ac.at>
Date:   Sat Dec 22 13:46:27 2012 +0100

    st/mesa: add support for GL_ARB_texture_buffer_range
    
    v2: Update to handle BufferSize being -1 and return a NULL sampler
    view if the specified range would cause out of bounds access.
    
    Reviewed-by: Brian Paul <brianp@vmware.com>
    Acked-by: Ian Romanick <ian.d.romanick@intel.com>

:040000 040000 4ab59bccd99143af20d12c48e957032d0091c763 db9c2730fef4b5e4a92c7eb7f700736ca8012049 M	src
Comment 1 Andreas Boll 2013-01-31 08:39:08 UTC
Patch posted to the list
http://lists.freedesktop.org/archives/mesa-dev/2013-January/033824.html
Comment 2 Brian Paul 2013-02-04 15:32:28 UTC
I pushed Andreas's patch for this (38d65a9769213c918427e92968dc0b4657c44436)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.